# DNSTester

./: .gitignore  CMakeLists.txt  DNSList  DNSTester.pro  DNSTester.pro.user.97a859e  README.md  dns-tester.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
debian/: DnsTester_1.0_amd64.deb  DnsTester_1.1_amd64.deb
src/: CMakeLists.txt  DnsTableModel.cpp  DnsTableModel.h  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multilistview.cpp  multilistview.h  multlistitem.cpp  multlistitem.h  networkutils.cpp  networkutils.h  resource.qrc
